deriving-310/tests/rejected/labels.ml
type label = x:int -> int
  deriving (Eq)
